--- a/LEOPOLD_qiskit_SMOTE_LoRA.ipynb
+++ b/LEOPOLD_qiskit_SMOTE_LoRA.ipynb
@@ -3831,17 +3831,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Muat kembali vectorizer\n",
+        "# Load again the vectorizer model\n",
         "with open('vectorizer.pkl', 'rb') as f:\n",
         "    vectorizer = pickle.load(f)\n",
         "\n",
-        "# Lakukan inverse_transform\n",
+        "# Do inverse_transform\n",
         "texts_reconstructed = vectorizer.inverse_transform(X_resampled)\n",
         "\n",
-        "# Gabungkan kata-kata menjadi teks\n",
+        "# Join words into text\n",
         "texts_reconstructed = [\" \".join(words) for words in texts_reconstructed]\n",
         "\n",
-        "# Buat DataFrame baru\n",
+        "# Create new DataFrame\n",
         "df_reconstructed = pd.DataFrame({\n",
         "    \"content\": texts_reconstructed,\n",
         "    \"sentiment\": y_resampled\n",
